[package]
name = "iter-group"
description = "Library for grouping (key,value) iterators into maps of collections"
version = "0.1.0"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
