[package]
name = "iter-group"
description = "Library for grouping (key,value) iterators into maps of collections"
version = "0.2.0"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
edition = "2021"
homepage = "https://github.com/tuffy/iter-group"
repository = "https://github.com/tuffy/iter-group"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
